# iris-loc-yolov5

./: command.md  detect.py  inference_test.py  test.py  train.py  val.py  yolov5n_iris.txt  yolov5n_sim.param
data/: iris.yaml
data/hyps/: hyp.scratch-low.yaml
models/: yolo.py  yolov5n.yaml  yolov5n_origin.yaml  yolov5s.yaml
ncnn/: 3anchor_sim.param  CMakeLists.txt  iris_s_sim.param  iris_sim.param  iris_train_sim.param  ncnn.param  onnx2ncnn  test_cam.py  yolov5.cpp  yolov5n6_sim.param  yolov5n_6_sim.param  yolov5n_sim.param  yolov5s_sim.param
ncnn/src/: platform.h
